add avatarUrl field for User Model, edit User Controller, update swagger
- add new field in User Model and add function generate  user's avatar
- add action get all user find by display name
- add action get user by id
